k8s/java-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  namespace: sonmt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: java-app
          image: maithanhson/demo-k8s:category_image
          ports:
            - containerPort: 8080
