k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: category-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: category
