k8s/collect-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: node-app-gateway
  namespace: sonmt
spec:
  selector:
    istio: ingressgateway # Use the default Istio ingress gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-app
  namespace: sonmt
spec:
  hosts:
    - "*"  # This can be set to a specific hostname
  gateways:
    - node-app-gateway
  http:
    - match:
        - uri:
            prefix: /  # This matches all paths
      route:
        - destination:
            host: node-app-service  # Name of your Node.js service
            port:
              number: 3000
